# Yassien-Portfolio

./: .gitignore  AGENTS.md  OOP Structure  README.md  app.py  architecture_evaluation.md  dash_app.py  index.py  netlify.toml  package.json  requirements.txt  vercel.json
api/: index.py
assets/css/: about.css  contact.css  credentials.css  education.css  global.css  home.css  navbar.css  preloader.css  projects.css  skills.css  society.css
assets/js/: contact.js  gallery_callbacks.js  navbar.js  preloader.js  society.js
content/: about.json  config.json  contact.json  credentials.json  education.json  home.json  projects.json  skills.json  society.json
content/projects/: 2d_beamforming_simulator.md  audiophileeq.md  automated_defibrillator_system.md  biorhythm_analyzer.md  bonevision.md  breastcancer_xai_evaluation.md  conveyorx.md  (+33 more)
data/: _01_intro.json  _03_projects.json  _04_education.json  _06_society.json  db_data.json
pages/: _01_intro.py  _02_about.py  _03_projects.py  _04_education.py  _05_skills.py  _06_society.py  _07_certificates.py  _08_contact.py
portfolio-mcp-server/: Dockerfile  README.md  pyproject.toml  server.py
portfolio-mcp-server/data/: bio.json  education.json  projects.json  skills.json
portfolio-mcp-server/tests/: sample_queries.md
public/: about.html  contact.html  credentials.html  education.html  index.html  projects.html  skills.html  society.html
scripts/: build.py  content_loader.py  convert_projects.py  server.py  sw_builder.py  update_assets.py  update_images.py
src/: routes.py
static/: sw.js
utils/: clean_cache.py
(+75 files in other folders)
